use a bottom fixed button for managing the collapsable sidebar

--- a/css/site-wbs-style.css
+++ b/css/site-wbs-style.css
@@ -788,10 +788,26 @@ div.w3c_leftCol h3.category span.ribbon {
 }
 
 #leftCol_menu {
-    width: 45px;
-    margin-left: -6px;
-    padding-left: 0px;
-    background: none;
+    background-color: white;
+    font-size: 1.1em;
+    margin-top: 20px;
+    padding: 8px 0 15px 10px; 
+    border-top: 1px solid #7e7e7e;
+    position: fixed;
+    bottom: 0px;
+}
+
+#leftCol_menu.expand {
+    width: 19%;
+}
+
+#leftCol_menu.collapse {
+    width: 3%;
+}
+
+#collapse_txt {
+    color: #5e5e5e;
+    padding-left: 8px;
 }
 
 #w3c_leftCol.fixedMenu {
@@ -802,6 +818,3 @@ div.w3c_leftCol h3.category span.ribbon {
     width:4%;
 }
 
-div.no_js{
-  display:none;
-}
